--- a/src/styles.css
+++ b/src/styles.css
@@ -480,6 +480,180 @@ padding-left: 700px;
 
 }
 
+@media (max-width: 600px) and ( max-height: 950px) {
+
+
+  html, body, .container, nav{
+    overflow-x: hidden;
+  }
+
+  .first h2{
+    font-size: 32px;
+    width: 50%;
+    margin: 0 ;
+  }
+
+  .nav--bar{
+    margin-top: 0;
+    z-index: 1;
+    padding: 20px 0;
+    backdrop-filter: blur(5px);
+  }
+
+  .logo {
+    margin-left: 120px;
+  }
+  
+  .section--one--container {
+    width: 360px;
+    margin-left: 6%;
+    margin-top: 60%;
+  }
+
+  .section--one--container > p {
+    width: 70%;
+    margin: 0;
+  }
+
+  
+  .section--third--container {
+    width: 100%;
+    margin-left: 7%;
+    padding: 0;
+  }
+
+  .section--third--container h2 {
+    margin: 0;
+    font-size: 32px;
+  }
+
+  .custom--bg{
+    width: 100%;
+  height: 800px;
+  background:  #FFFFFF;
+  -webkit-transform: skew(65deg);
+  -moz-transform: skew(65deg);
+  -o-transform: skew(65deg);
+  transform: skew(65deg) rotate(65deg);
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-top: -650px;
+  }
+  .custom--bg2{
+    width: 100%;
+    height: 600px;
+    background:  #FFFFFF;
+    -webkit-transform: skew(140deg);
+    -moz-transform: skew(140deg);
+    -o-transform: skew(140deg);
+    transform: skew(140deg) rotate(140deg);
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-top: 1800px;
+  }
+
+  .second{
+    width: 100%;
+    margin-left: 7%;
+    padding-top: 200px;
+  }
+
+  .second h2 {
+    font-size: 32px;
+    letter-spacing: 0;
+    margin: 0;
+  }
+
+  h2{
+    font-family: Zanna Personal Use Only;
+    font-size: 3rem;
+    font-weight: 200;
+    line-height: 3rem;
+  }
+  
+.nav--bar{
+    margin-left: -100px;
+  }
+
+  .fourth{
+    justify-content: center;
+    position: relative;
+    height: 450px;
+  }
+  .section--fourth--logo{
+    display: flex;
+    width: 119.74px;
+    height: 51.17px;
+    top: 139.82px;
+    left: 16px;
+    gap: 120px;
+    opacity: 0px;
+    margin-left: -25px;
+    margin-top: -290px;
+  }
+  
+  .section--fourth--logo h1{
+    font-family: Zanna Personal Use Only;
+    font-size: 55px;
+    font-weight: 400;
+    margin-top: 190px;
+    line-height: 69.08px;
+    padding-top: 100px;
+    margin-left: 0px;
+  }
+  
+  .sub-title {
+    display: none;
+  }
+
+  .sub-titlem {
+    display: inline;
+    padding-top: 150px;
+    margin-left: 130px;
+  }
+
+  .sub-titlem h2{
+    font-size: 15px;
+  }  
+
+  .footer {
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .left {
+    width: 60%;
+    margin-left: 0; 
+  }
+  
+  .left img {
+    margin-top: -15px;
+    margin-left: -6px;
+  }
+
+  .footer {
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .left {
+    width: 60%;
+    margin-left: 0; 
+  }
+  
+  .left img {
+    margin-top: -15px;
+    margin-left: -6px;
+  }
+
+}
+
 @media (max-width: 600px) and ( max-height: 900px) {
 
 
@@ -601,6 +775,7 @@ padding-left: 700px;
     line-height: 69.08px;
     padding-top: 100px;
     margin-left: 5px;
+    margin-top: 40px;
   }
   
   .sub-title {
@@ -609,7 +784,7 @@ padding-left: 700px;
 
   .sub-titlem {
     display: inline;
-    margin-top: -140px;
+    margin-top: 0px;
     margin-left: 130px;
   }
 
@@ -765,7 +940,7 @@ padding-left: 700px;
 
   .sub-titlem {
     display: inline;
-    margin-top: 0px;
+    margin-top: 140px;
     margin-left: 130px;
   }
 
@@ -892,7 +1067,7 @@ padding-left: 700px;
   .fourth{
     justify-content: center;
     position: relative;
-    height: 625px;
+    height: 350px;
   }
   .section--fourth--logo{
     display: flex;
@@ -903,7 +1078,7 @@ padding-left: 700px;
     gap: 105px;
     opacity: 0px;
     margin-left: -25px;
-    margin-top: -290px;
+    margin-top: -130px;
   }
   
   .section--fourth--logo h1{
@@ -921,7 +1096,7 @@ padding-left: 700px;
 
   .sub-titlem {
     display: inline;
-    margin-top: -140px;
+    margin-top: 10px;
     margin-left: 130px;
   }
 
@@ -1031,7 +1206,7 @@ padding-left: 700px;
   .fourth{
     justify-content: center;
     position: relative;
-    height: 600px;
+    height: 500px;
   }
   .section--fourth--logo{
     display: flex;
@@ -1042,7 +1217,7 @@ padding-left: 700px;
     gap: 100px;
     opacity: 0px;
     margin-left: -25px;
-    margin-top: -290px;
+    margin-top: -10px;
   }
   
   .section--fourth--logo h1{
@@ -1060,7 +1235,7 @@ padding-left: 700px;
 
   .sub-titlem {
     display: inline;
-    margin-top: -140px;
+    margin-top: 210px;
     margin-left: 130px;
   }
 
@@ -1170,7 +1345,7 @@ padding-left: 700px;
   .fourth{
     justify-content: center;
     position: relative;
-    height: 550px;
+    height: 400px;
   }
   .section--fourth--logo{
     display: flex;
@@ -1189,7 +1364,7 @@ padding-left: 700px;
     font-size: 55px;
     font-weight: 400;
     line-height: 69.08px;
-    padding-top: 100px;
+    padding-top: 335px;
     margin-left: 8px;
   }
   
@@ -1199,13 +1374,17 @@ padding-left: 700px;
 
   .sub-titlem {
     display: inline;
-    margin-top: -140px;
+    margin-top: 160px;
     margin-left: 130px;
   }
 
   .sub-titlem h2{
     font-size: 15px;
-  }  
+  } 
+  
+  .footer {
+    height: 270px;
+  }
 
 }
 
@@ -1320,7 +1499,7 @@ padding-left: 700px;
     gap: 80px;
     opacity: 0px;
     margin-left: -25px;
-    margin-top: -290px;
+    margin-top: -10px;
   }
   
   .section--fourth--logo h1{
@@ -1338,13 +1517,30 @@ padding-left: 700px;
 
   .sub-titlem {
     display: inline;
-    margin-top: -140px;
+    margin-top: 200px;
     margin-left: 130px;
   }
 
   .sub-titlem h2{
     font-size: 15px;
   }  
+
+  .footer {
+    height: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .left {
+    width: 70%;
+    margin-left: 0; 
+  }
+  
+  .left img {
+    margin-top: -15px;
+    margin-left: -6px;
+  }
 
 }
 
@@ -1457,10 +1653,10 @@ padding-left: 700px;
     height: 51.17px;
     top: 139.82px;
     left: 16px;
-    gap: 80px;
+    gap: 65px;
     opacity: 0px;
     margin-left: -25px;
-    margin-top: -290px;
+    margin-top: -10px;
   }
   
   .section--fourth--logo h1{
@@ -1478,13 +1674,30 @@ padding-left: 700px;
 
   .sub-titlem {
     display: inline;
-    margin-top: -140px;
-    margin-left: 130px;
+    margin-top: 220px;
+    margin-left: 120px;
   }
 
   .sub-titlem h2{
     font-size: 15px;
   }  
+
+  .footer {
+    height: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .left {
+    width: 70%;
+    margin-left: 0; 
+  }
+  
+  .left img {
+    margin-top: -15px;
+    margin-left: -6px;
+  }
 
 }
 
@@ -1597,10 +1810,10 @@ padding-left: 700px;
     height: 51.17px;
     top: 139.82px;
     left: 16px;
-    gap: 80px;
+    gap: 60px;
     opacity: 0px;
-    margin-left: -25px;
-    margin-top: -290px;
+    margin-left: -35px;
+    margin-top: -80px;
   }
   
   .section--fourth--logo h1{
@@ -1618,13 +1831,30 @@ padding-left: 700px;
 
   .sub-titlem {
     display: inline;
-    margin-top: -140px;
-    margin-left: 130px;
+    margin-top: 100px;
+    margin-left: 100px;
   }
 
   .sub-titlem h2{
     font-size: 15px;
-  }  
+  } 
+  
+  .footer {
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .left {
+    width: 70%;
+    margin-left: 0; 
+  }
+  
+  .left img {
+    margin-top: -15px;
+    margin-left: -6px;
+  }
 
 }
 
