--- a/src/styles.css
+++ b/src/styles.css
@@ -450,36 +450,38 @@ padding-left: 700px;
 
   .footer {
     height: 300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
   }
 
   .left {
-    width: 80%;
-    margin-left: 0; 
+    margin-left: 30px;
   }
-  
+
+  .left p {
+    font-size: 13px;
+    padding-top: 15px;
+  }
+
   .left img {
+    width: 250px;
     margin-top: -15px;
     margin-left: -6px;
   }
 
-  .footer {
-    height: 300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  .right {
+    width: 100%;
+    font-size: 14px;
+    margin: 0;
+    margin-left: 30px;
   }
 
-  .left {
-    width: 80%;
-    margin-left: 0; 
+  .social p{
+    display: none;
   }
-  
-  .left img {
-    margin-top: -15px;
-    margin-left: -6px;
+
+  .social {
+    margin-top: 20px;
+    margin-left: 30px;
   }
 
 }
@@ -624,36 +626,38 @@ padding-left: 700px;
 
   .footer {
     height: 300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
   }
 
   .left {
-    width: 80%;
-    margin-left: 0; 
+    margin-left: 30px;
   }
-  
+
+  .left p {
+    font-size: 13px;
+    padding-top: 15px;
+  }
+
   .left img {
+    width: 250px;
     margin-top: -15px;
     margin-left: -6px;
   }
 
-  .footer {
-    height: 300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  .right {
+    width: 100%;
+    font-size: 14px;
+    margin: 0;
+    margin-left: 30px;
   }
 
-  .left {
-    width: 80%;
-    margin-left: 0; 
+  .social p{
+    display: none;
   }
-  
-  .left img {
-    margin-top: -15px;
-    margin-left: -6px;
+
+  .social {
+    margin-top: 20px;
+    margin-left: 30px;
   }
 
 }
@@ -798,19 +802,38 @@ padding-left: 700px;
 
   .footer {
     height: 300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
   }
 
   .left {
-    width: 80%;
-    margin-left: 0; 
+    margin-left: 30px;
   }
-  
+
+  .left p {
+    font-size: 13px;
+    padding-top: 15px;
+  }
+
   .left img {
+    width: 250px;
     margin-top: -15px;
     margin-left: -6px;
+  }
+
+  .right {
+    width: 100%;
+    font-size: 14px;
+    margin: 0;
+    margin-left: 30px;
+  }
+
+  .social p{
+    display: none;
+  }
+
+  .social {
+    margin-top: 20px;
+    margin-left: 30px;
   }
 
 }
@@ -954,19 +977,38 @@ padding-left: 700px;
 
   .footer {
     height: 300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
   }
 
   .left {
-    width: 80%;
-    margin-left: 0; 
+    margin-left: 30px;
   }
-  
+
+  .left p {
+    font-size: 13px;
+    padding-top: 15px;
+  }
+
   .left img {
+    width: 250px;
     margin-top: -15px;
     margin-left: -6px;
+  }
+
+  .right {
+    width: 100%;
+    font-size: 14px;
+    margin: 0;
+    margin-left: 30px;
+  }
+
+  .social p{
+    display: none;
+  }
+
+  .social {
+    margin-top: 20px;
+    margin-left: 30px;
   }
 
 }
@@ -1388,6 +1430,38 @@ padding-left: 700px;
   
   .footer {
     height: 270px;
+    display: block;
+  }
+
+  .left {
+    margin-left: 30px;
+  }
+
+  .left p {
+    font-size: 13px;
+    padding-top: 15px;
+  }
+
+  .left img {
+    width: 250px;
+    margin-top: -15px;
+    margin-left: -6px;
+  }
+
+  .right {
+    width: 100%;
+    font-size: 14px;
+    margin: 0;
+    margin-left: 30px;
+  }
+
+  .social p{
+    display: none;
+  }
+
+  .social {
+    margin-top: 20px;
+    margin-left: 30px;
   }
 
 }
@@ -1531,19 +1605,39 @@ padding-left: 700px;
 
   .footer {
     height: 250px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
   }
 
   .left {
-    width: 80%;
-    margin-left: 0; 
+    width: 100%;
+    margin-left: 30px;
   }
-  
+
+  .left p {
+    font-size: 13px;
+    padding-top: 15px;
+  }
+
   .left img {
+    width: 250px;
     margin-top: -15px;
     margin-left: -6px;
+  }
+
+  .right {
+    width: 100%;
+    font-size: 14px;
+    margin: 0;
+    margin-left: 30px;
+  }
+
+  .social p{
+    display: none;
+  }
+
+  .social {
+    margin-top: 20px;
+    margin-left: 30px;
   }
 
 }
@@ -1688,19 +1782,39 @@ padding-left: 700px;
 
   .footer {
     height: 250px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
   }
 
   .left {
-    width: 80%;
-    margin-left: 0; 
+    width: 100%;
+    margin-left: 30px;
   }
-  
+
+  .left p {
+    font-size: 13px;
+    padding-top: 15px;
+  }
+
   .left img {
+    width: 250px;
     margin-top: -15px;
     margin-left: -6px;
+  }
+
+  .right {
+    width: 100%;
+    font-size: 14px;
+    margin: 0;
+    margin-left: 30px;
+  }
+
+  .social p{
+    display: none;
+  }
+
+  .social {
+    margin-top: 20px;
+    margin-left: 30px;
   }
 
 }
@@ -1844,20 +1958,40 @@ padding-left: 700px;
   } 
   
   .footer {
-    height: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    height: 250px;
+    display: block;
   }
 
   .left {
-    width: 80%;
-    margin-left: 0; 
+    width: 100%;
+    margin-left: 30px;
   }
-  
+
+  .left p {
+    font-size: 13px;
+    padding-top: 15px;
+  }
+
   .left img {
+    width: 250px;
     margin-top: -15px;
     margin-left: -6px;
+  }
+
+  .right {
+    width: 100%;
+    font-size: 14px;
+    margin: 0;
+    margin-left: 30px;
+  }
+
+  .social p{
+    display: none;
+  }
+
+  .social {
+    margin-top: 20px;
+    margin-left: 30px;
   }
 
 }
